# melochy

./: .env.example  .gitignore  .pylintrc  DEPLOY.md  FIX_CSS.md  QUICK_DEPLOY.md  SERVER_COMMANDS.md  app.db  config.py  deploy.sh  init_db.py  mypy.ini  nginx.conf  pyproject.toml  requirements.txt  run.py  supervisor.conf  wsgi.py
app/: __init__.py  models.py
app/routes/: admin.py  auth.py  main.py  supplier.py
app/static/css/: emil -.ini  style.css
app/static/js/: main.js
app/templates/: base.html
app/templates/admin/: add_category.html  add_product.html  add_user.html  categories.html  dashboard.html  edit_product.html  edit_shop.html  edit_supplier.html  product_detail.html  products.html  reports.html  request_detail.html  requests.html  shops.html  supplier_detail.html  suppliers.html  users.html
app/templates/auth/: login.html
app/templates/supplier/: add_product.html  add_shop.html  change_password.html  create_request.html  dashboard.html  edit_profile.html  edit_request.html  profile.html  shop_detail.html  shop_requests.html  shops.html  view_request.html
